modified:   index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Voyage en Espagne ma geule</h1>
+    <h1>Voyage en Espagne ma geul</h1>
   </header>
 
   <nav id="sommaire">
