--- a/index.html
+++ b/index.html
@@ -1,51 +1,89 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Voyage en Corce</title>
+  <title>Trip to Spain</title>
   <link rel="stylesheet" href="styles.css">
   <script src="main.js"></script>
 </head>
 <body>
   <header>
-    <h1>Voyage en Espagne ma geulle</h1>
+    <h2>.</h2>
   </header>
 
   <nav id="sommaire">
-    <h2>Sommaire</h2>
+    <h2>Summary</h2>
     <ul>
-      <li><a href="#rencontre">Notre rencontre</a></li>
-      <li><a href="#voyage">Notre voyage en Espagne</a></li>
-      <li><a href="#galerie">Galerie de photos</a></li>
-      <!-- Ajoutez ici les autres sections du sommaire -->
+       <li><a href="#christmas">Christmas with Family</a></li>
+      <li><a href="#noirmoutier">Visit to Noirmoutier</a></li>
+      <li><a href="#the_first_step">Evening Talks</a></li>
     </ul>
   </nav>
 
   <main>
-  
-      <!-- Ajoutez ici les autres sections du contenu -->
-      <section id="galerie">
-        <div class="content">
-          <h2>Galerie de photos</h2>
-          <!-- Ajoutez ici vos photos avec des légendes -->
+    <section id="christmas">
+      <div class="content">
+        <h2>Christmas with Family</h2>
+        <p>We spent a wonderful Christmas with my family.
+          Firse, I want to remember thez day withour ambre, when my parents was trying to eat with jobstiks. It was verry funny </p>
+        <p> The shared moments, laughter, and memories made this festive time truly special and unforgettable. I remember the times during the lunch in my grandparents house, when we was visiting talking with my familly.</p>
+      </div>
+    </section>
+
+    <section id="noirmoutier">
+      <div class="content">
+        <h2>Exploring Noirmoutier</h2>
+        <p>We decided to visit Noirmoutier with my familly, a beautiful place. It was there that we grew even closer. 
+          I remember especially the times in the house (for exemple, the fire).</p>
           <div class="photo">
-            <img src="src/1.jpeg" alt="src/1.jpg">
-            <p>Légende de la photo</p>
-            <video controls>
-              <source src="src/1.mp4" type="video/mp4">
-              <p>Votre navigateur ne supporte pas la lecture de vidéos.</p>
-            </video>
+          <img  src="src/39.jpeg" alt="Img">
           </div>
+          <p>Or the piano ! </p>
+          <div>
+            <img src="src/71.jpeg" alt="">
+            <img src="src/67.jpeg" alt="">
+          </div>
+          <p>After, effectivly I remember the Tower on the gois, our first pictures togather :)</p>
+          <div>
+            <img src="src/28.jpeg" alt="">
+            <img src="src/65.jpeg" alt="">
+            <p>and my mom was very good to take pictures too</p>
+            <img src="src/61.jpeg" alt="">
+            <img src="src/53.jpeg" alt="">
+          </div>
+          <p>After that, we was allways talking in the sofa for a long time. Ti feels too quickly...</p>
+          <p>Maybe, it was possible to kiss here but not sure of that? (you will maybe tell me)</p>
+      </div>
+    </section>
+
+    <section id="the_first_step">
+      <div class="content">
+        <h2>The first step</h2>
+        <p>Can I put just one picture ? </p>
+        <div>
+          <img src="src/500.jpeg" alt="">
         </div>
-      </section>
-  
-      <!-- Ajoutez ici les autres sections du contenu -->
+        <p>I know it was horrible and not fun. I remember my mother says you was very sad and you was crying. But I'm full good now, see : </p>
+        <img src="src/36.jpeg" alt="">
+        <p>(Ok, i know this picture was before but still)</p>
+        <p>I just remember the times after that, like all that pictures  : </p>
+        <div>
+          <img src="src/73.jpeg" alt="">
+          <img src="src/74.jpeg" alt="">
+          <img src="src/75.jpeg" alt="">
+          <img src="src/76.jpeg" alt="">
+          <img src="src/77.jpeg" alt="">
+        </div>
+      </div>
+    </section>
+
+    <!-- Add other sections of content here -->
 
   </main>
 
   <footer>
-    <p>&copy; 2023 Voyage en Espagne. Tous droits réservés.</p>
+    <p>&copy; 2023 Trip to Spain. All rights reserved.</p>
   </footer>
 </body>
 </html>
