--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
           </div>
           <p>Or the piano ! </p>
           <div>
-            <img src="src/71.jpeg" alt="">
-            <img src="src/67.jpeg" alt="">
+            <img src="src/71.jpeg" alt="" loading="lazy">
+            <img src="src/67.jpeg" alt="" loading="lazy">
           </div>
           <p>After, effectivly I remember the Tower on the gois, our first pictures togather :)</p>
           <div>
-            <img src="src/28.jpeg" alt="">
-            <img src="src/65.jpeg" alt="">
+            <img src="src/28.jpeg" alt="" loading="lazy">
+            <img src="src/65.jpeg" alt="" loading="lazy">
             <p>and my mom was very good to take pictures too</p>
-            <img src="src/61.jpeg" alt="">
-            <img src="src/53.jpeg" alt="">
+            <img src="src/61.jpeg" alt="" loading="lazy">
+            <img src="src/53.jpeg" alt="" loading="lazy">
           </div>
           <p>After that, we was allways talking in the sofa for a long time. Ti feels too quickly...</p>
           <p>Maybe, it was possible to kiss here but not sure of that? (you will maybe tell me)</p>
@@ -62,18 +62,18 @@
         <h2>The first step</h2>
         <p>Can I put just one picture ? </p>
         <div>
-          <img src="src/500.jpeg" alt="">
+          <img src="src/500.jpeg" alt="" loading="lazy">
         </div>
         <p>I know it was horrible and not fun. I remember my mother says you was very sad and you was crying. But I'm full good now, see : </p>
-        <img src="src/36.jpeg" alt="">
+        <img src="src/36.jpeg" alt="" loading="lazy">
         <p>(Ok, i know this picture was before but still)</p>
         <p>I just remember the times after that, like all that pictures  : </p>
         <div>
-          <img src="src/73.jpeg" alt="">
-          <img src="src/74.jpeg" alt="">
-          <img src="src/75.jpeg" alt="">
-          <img src="src/76.jpeg" alt="">
-          <img src="src/77.jpeg" alt="">
+          <img src="src/73.jpeg" alt="" loading="lazy">
+          <img src="src/74.jpeg" alt="" loading="lazy">
+          <img src="src/75.jpeg" alt="" loading="lazy">
+          <img src="src/76.jpeg" alt="" loading="lazy">
+          <img src="src/77.jpeg" alt="" loading="lazy">
         </div>
       </div>
     </section>
