--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
   <header>
     <h2>.</h2>
   </header>
-
-  <nav id="sommaire">
+  <button id="sommaire-toggle">
+  <nav id="sommaire" class="active">
     <h2>Summary</h2>
     <ul>
        <li><a href="#christmas">Christmas with Family</a></li>
       <li><a href="#noirmoutier">Visit to Noirmoutier</a></li>
-      <li><a href="#the_first_step">Evening Talks</a></li>
+      <li><a href="#the_first_step">The first step</a></li>
+      <li><a href="#paris">Fitst trip : Paris</a></li>
     </ul>
   </nav>
-
+</button>
   <main>
     <section id="christmas">
       <div class="content">
@@ -75,8 +76,17 @@
           <img src="src/76.jpeg" alt="" loading="lazy">
           <img src="src/77.jpeg" alt="" loading="lazy">
         </div>
+        <p>It was at that time, we didn't knew hot it will be good to be togather.</p>
+        <img src="src/412.jpeg" alt="" loading="lazy">
       </div>
     </section>
+
+    <section id="paris">
+      <div class="content">
+        <h2>The first trip : Paris</h2>
+        <p>The begin of our story will start now, It was strange because we was not in relationship for a long time but i went to see you in paris. It was too strange to do that alone with you :)</p>
+        <img src="src/77.jpeg" alt="" loading="lazy">
+      </section>
 
     <!-- Add other sections of content here -->
 
