--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav id="sommaire" class="active">
     <h2>Summary</h2>
     <ul>
-       <li><a href="#christmas">Christmas with Family(testconnection)</a></li>
+       <li><a href="#christmas">Christmas with Family</a></li>
       <li><a href="#noirmoutier">Visit to Noirmoutier</a></li>
       <li><a href="#the_first_step">The first step</a></li>
       <li><a href="#paris">Fitst trip : Paris</a></li>
