--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <header>
     <h2>.</h2>
   </header>
+  <button id="sommaire-toggle">
   <nav id="sommaire" class="active">
     <h2>Summary</h2>
     <ul>
@@ -20,6 +21,7 @@
       <li><a href="#paris">Fitst trip : Paris</a></li>
     </ul>
   </nav>
+</button>
   <main>
     <section id="christmas">
       <div class="content">
