--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
       <div class="content">
         <h2>The first trip : Paris</h2>
         <p>The begin of our story will start now, It was strange because we was not in relationship for a long time but i went to see you in paris. It was too strange to do that alone with you :)</p>
-        <div></div><img src="src/78.jpeg" alt="" loading="lazy">
+        <div>
+          <img src="src/78.jpeg" alt="" loading="lazy">
+        </div>
       </section>
 
     <!-- Add other sections of content here -->
