--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <div>
           <img src="src/78.jpeg" alt="" loading="lazy">
           <img src="src/136.jpeg" alt="" loading="lazy">
+          <p>I remember this trip, wirh </p>
         </div>
       </section>
 
