--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div>
           <img src="src/78.jpeg" alt="" loading="lazy">
           <img src="src/136.jpeg" alt="" loading="lazy">
-          <p>I remember this trip, wi</p>
+          <p>I remember this trip, with lot of things, lot of memories like when the </p>
         </div>
       </section>
 
