--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <img src="src/78.jpeg" alt="" loading="lazy">
           <img src="src/136.jpeg" alt="" loading="lazy">
           <p>I remember this trip, with lot of things, lot of memories like when the man in  the restaurant was talking to me in english ^^</p>
-          <p>It was very good and out of time. We was </p>
+          <p>It was very good and out of time. We was listening our girst songs togather like </p>
         </div>
       </section>
 
