--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <img src="src/136.jpeg" alt="" loading="lazy">
           <p>I remember this trip, with lot of things, lot of memories like when the man in  the restaurant was talking to me in english ^^</p>
           <p>It was very good and out of time. We was listening our girst songs togather like About time and i started to listen Sarha Kang.</p>
-          <p>We was in a not very romantic ho</p>
+          <p>We was in a not very romantic hotel but the objective was to be togather and w</p>
         </div>
       </section>
 
