--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 Trip to Spain. All rights reserved.</p>
+    <p>&copy; Jules EVENO-GALLEN, for LEE Jieun.</p>
   </footer>
 </body>
 </html>
