--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </main>
 
   <footer>
-    <p>&copy; Jules EVENO-GALLEN, for LEE Jieun my love.</p>
+    <p>&copy; Jules EVENO-GALLEN, for LEE Jieun.</p>
   </footer>
 </body>
 </html>
