--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <img src="src/175.jpeg" alt="">
         </div>
       </section>
-      <select " id=""></select>
+      selection
     <!-- Add other sections of content here -->
 
   </main>
