--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <img src="src/175.jpeg" alt="">
         </div>
       </section>
-      <section id="BefinOfP">
+      <section id="BefinOfHard">
         <div class="content">
           <h2>Christmas with Family</h2>
           <p>We spent a wonderful Christmas with my family.
