--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </section>
       <section id="BefinOfHard">
         <div class="content">
-          <h2>Christmas with Family</h2>
+          <h2>The begin of the hard side</h2>
           <p>We spent a wonderful Christmas with my family.
             Firse, I want to remember thez day withour ambre, when my parents was trying to eat with jobstiks. It was verry funny </p>
           <p> The shared moments, laughter, and memories made this festive time truly special and unforgettable. I remember the times during the lunch in my grandparents house, when we was visiting talking with my familly.</p>
