--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
       <section id="BefinOfHard">
         <div class="content">
           <h2>The begin of the hard side</h2>
-          <p>We spent a wonderful Christmas with my family.
-            Firse, I want to remember thez day withour ambre, when my parents was trying to eat with jobstiks. It was verry funny </p>
-          <p> The shared moments, laughter, and memories made this festive time truly special and unforgettable. I remember the times during the lunch in my grandparents house, when we was visiting talking with my familly.</p>
+          <p>At that time, I was so so sad. I was </p>
         </div>
       </section>
     <!-- Add other sections of content here -->
