--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <section id="BefinOfHard">
         <div class="content">
           <h2>The begin of the hard side</h2>
-          <p>At that time, I was so so sad. I was </p>
+          <p>At that time, I was so so sad. I was crying a lot in the train and it was so hard for me, maybe for you too. </p>
         </div>
       </section>
     <!-- Add other sections of content here -->
