--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <section id="BefinOfHard">
         <div class="content">
           <h2>The begin of the hard side</h2>
-          <p>At that time, I was so so sad. I was crying a lot in the train and it was so hard for me, maybe for you too. This month between paris and nantes was dificult but i never stop to s</p>
+          <p>At that time, I was so so sad. I was crying a lot in the train and it was so hard for me, maybe for you too. This month between paris and nantes was dificult but i never stop to show you my love by lot and lot ways</p>
         </div>
       </section>
     <!-- Add other sections of content here -->
