--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="content">
           <h2>The begin of the hard side</h2>
           <p>At that time, I was so so sad. I was crying a lot in the train and it was so hard for me, maybe for you too. This month between paris and nantes was dificult but i never stop to show you my love by lot and lot ways :)</p>
-          <img src="" alt="">
+          <img src="s" alt="">
         </div>
       </section>
     <!-- Add other sections of content here -->
