--- a/index.html
+++ b/index.html
@@ -97,7 +97,19 @@
         <div class="content">
           <h2>The begin of the hard side</h2>
           <p>At that time, I was so so sad. I was crying a lot in the train and it was so hard for me, maybe for you too. This month between paris and nantes was dificult but i never stop to show you my love by lot and lot ways :)</p>
-          <img src="s" alt="">
+          <img src="src/431.jpeg" alt="">
+          <p>I remember lot of things like planing the trip in nantes. I remember my emotions too, i was crying a lot and I was allways so happy to call you evryyimes.</p>
+          <img src="src/448.jpg" alt="">
+        </div>
+      </section>
+
+      <section id="1stNantes">
+        <div class="content">
+          <h2>The first trip in nantes</h2>
+          <p>How can i say that ?</p>
+          <p>The first trip in nantes was with not a lot of visits but i really think you know my room well ! </p>
+          <img src="src/152.jpeg" alt="">
+          <p>I remember when we was on the way to go to my restaurant. The sunse</p>
         </div>
       </section>
     <!-- Add other sections of content here -->
