--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <p>How can i say that ?</p>
           <p>The first trip in nantes was with not a lot of visits but i really think you know my room well ! </p>
           <img src="src/152.jpeg" alt="">
-          <p>I remember when we was on the way to go to my restaurant. The sunset was very beautiful and we stoped in </p>
+          <p>I remember when we was on the way to go to my restaurant. The sunset was very beautiful and we stoped in Grand </p>
         </div>
       </section>
     <!-- Add other sections of content here -->
