--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <p>The first trip in nantes was with not a lot of visits but i really think you know my room well ! </p>
           <img src="src/152.jpeg" alt="">
           <p>I remember when we was on the way to go to my restaurant. The sunset was very beautiful and we stoped in Grand champ les Fontaines. It was good (exept the farmer, little bit strange maybe)</p>
-          <img src="" alt="">
+          <img src="src/151.jpeg" alt="">
         </div>
       </section>
     <!-- Add other sections of content here -->
