--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="content">
           <h2>The first trip in nantes</h2>
           <p>How can i say that ?</p>
-          <p>The first trip in nantes was with not a lot of visits but i really think you know my room well ! </p>
+          <p>The first trip in nantes was with not a lot of visits but i really think you know my room well ! (maybe my body too but it's a secret) </p>
           <img src="src/152.jpeg" alt="">
           <p>I remember when we was on the way to go to my restaurant. The sunset was very beautiful and we stoped in Grand champ les Fontaines. It was good (exept the farmer, little bit strange maybe)</p>
           <img src="src/151.jpeg" alt="">
