--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <img src="src/152.jpeg" alt="">
           <p>I remember when we was on the way to go to my restaurant. The sunset was very beautiful and we stoped in Grand champ les Fontaines. It was good (exept the farmer, little bit strange maybe)</p>
           <img src="src/151.jpeg" alt="">
-          <p>And i have a problem : I can'r find my sweatshirt ... Do you know where it is ?</p>
+          <p>And i have a problem : I can'r find my sweatshirt ... Do you know where it is ?
           <img src="src/154.jpeg" alt="">
 
         </div>
