--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <img src="src/151.jpeg" alt="">
           <p>And i have a problem : I can'r find my sweatshirt ... Do you know where it is ?</p>
           <img src="src/154.jpeg" alt="">
-          <p></p>
+          <p>We was in the restaurant and i remember the night half in the sofa, </p>
         </div>
       </section>
     <!-- Add other sections of content here -->
