--- a/index.html
+++ b/index.html
@@ -121,15 +121,7 @@
       <section id="Nantes">
         <div class="content">
           <h2>Trip : Nantes</h2>
-          <p>How can i say that ?</p>
-          <p>The first trip in nantes was with not a lot of visits but i really think you know my room well ! (maybe my body too but it's a secret) </p>
-          <img src="src/152.jpeg" alt="">
-          <p>I remember when we was on the way to go to my restaurant. The sunset was very beautiful and we stoped in Grand champ les Fontaines. It was good (exept the farmer, little bit strange maybe)</p>
-          <p>We tried to visit the cassle but it was hard (because of you, you are too pretty)</p>
-          <img src="src/151.jpeg" alt="">
-          <p>And i have a problem : I can'r find my sweatshirt ... Do you know where it is ?</p>
-          <img src="src/154.jpeg" alt="">
-          <p>We was in the restaurant and i remember the night half in the sofa, we just remember our first kisses and it make me happy, just to think at that</p>
+          <p>Normally it was just a </p>
         </div>
       </section>
     <!-- Add other sections of content here -->
