--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <section id="Nantes">
         <div class="content">
           <h2>Trip : Nantes</h2>
-          <p>Normally it was just a </p>
+          <p>Normally, we had to go by plane to </p>
         </div>
       </section>
     <!-- Add other sections of content here -->
