--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="content">
           <h2>Trip : Nantes</h2>
           <p>Normally, we had to go by plane to madrid but it was more dificult than the plan...The plane was canseled </p>
-        
+        <img src="src/1.jpeg" alt="">
         </div>
       </section>
     <!-- Add other sections of content here -->
