--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <li><a href="#noirmoutier">Visit to Noirmoutier</a></li>
       <li><a href="#the_first_step">The first step</a></li>
       <li><a href="#paris">Fitst trip : Paris</a></li>
-      <li><a href="#"></a></li>
+      <li><a href="#1stNantes"></a>The begin of the hard side
+      </li>
     </ul>
   </nav>
 </button>
