--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <li><a href="#paris">Fitst trip : Paris</a></li>
       <li><a href="#1stNantes"></a>The begin of the hard side
       </li>
+      <li><a href=""></a>
+      </li>
     </ul>
   </nav>
 </button>
