--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li><a href="#paris">Fitst trip : Paris</a></li>
       <li><a href="#1stNantes"></a>The begin of the hard side
       </li>
-      <li><a href=""></a>
+      <li><a href="Nantes"></a>
       </li>
     </ul>
   </nav>
