--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       <li><a href="#paris">Fitst trip : Paris</a></li>
       <li><a href="#1stNantes"></a>The begin of the hard side
       </li>
-      <li><a href="Nantes"></a>
+      <li><a href="Nantes">Trip : Nantes</a>
       </li>
+      
     </ul>
   </nav>
 </button>
@@ -137,4 +138,4 @@
     <p>&copy; Jules EVENO-GALLEN, for LEE Jieun.</p>
   </footer>
 </body>
-</html>
+<
