--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
       <li><a href="#noirmoutier">Visit to Noirmoutier</a></li>
       <li><a href="#the_first_step">The first step</a></li>
       <li><a href="#paris">Fitst trip : Paris</a></li>
-      <li><a href="#1stNantes"></a>The begin of the hard side
-      </li>
-      <li><a href="Nantes">Trip : Nantes</a>
-      </li>
-      
+      <li><a href="#1stNantes"></a>The begin of the hard side</li>
+      <li><a href="Nantes">Trip : Nantes</a></li>
     </ul>
   </nav>
 </button>
@@ -138,4 +135,4 @@
     <p>&copy; Jules EVENO-GALLEN, for LEE Jieun.</p>
   </footer>
 </body>
-<
+</html>
