--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
       </section>
 
-      <section id="1stNantes">
+      <section id="stNantes">
         <div class="content">
           <h2>The first trip in nantes</h2>
           <p>How can i say that ?</p>
