--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Summary</h2>
     <ul>
        <li><a href="#christmas">Christmas with Familyy</a></li>
-      <li><a href="#noirmoutier">Visit to Noirmoutier</a></li>
+      <li><a href="#noirmoutier">Noirmoutier</a></li>
       <li><a href="#the_first_step">The first step</a></li>
       <li><a href="#paris">Fitst trip : Paris</a></li>
       <li><a href="#BefinOfHard">The begin of the hard side</a><li>
