--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <section id="noirmoutier">
       <div class="content">
-        <h2>Exploring Noirmoutier</h2>
+        <h2>Noirmoutier</h2>
         <p>We decided to visit Noirmoutier with my familly, a beautiful place. It was there that we grew even closer. 
           I remember especially the times in the house (for exemple, the fire).</p>
           <div class="photo">
