--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href="#the_first_step">The first step</a></li>
       <li><a href="#paris">Fitst trip : Paris</a></li>
       <li><a href="#BefinOfHard">The begin of the hard side</a><li>
-      <li><a href=""></a></li>
+      <li><a href="stNantes">The first trip in nante</a></li>
       <li><a href="Nantes">Trip : Nantes</a></li>
     </ul>
   </nav>
