--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <h2>Trip : Nantes</h2>
           <p>Normally, we had to go by plane to madrid but it was more dificult than the plan...The plane was canseled </p>
         <img src="src/1.jpeg" alt="">
-        <p></p>
+        <p>It was not a bug problem for us,</p>
         </div>
       </section>
     <!-- Add other sections of content here -->
