--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <p>Normally, we had to go by plane to madrid but it was more dificult than the plan...The plane was canseled </p>
         <img src="src/1.jpeg" alt="">
         <p>It was not a bug problem for us, we took the bus to bordeaux, it was very short and we was very very late but it was good finally :) </p>
-        <p>I remember the city </p>
+        <p>I remember the city in bordeaux with the tram, the </p>
         </div>
       </section>
     <!-- Add other sections of content here -->
