--- a/index.html
+++ b/index.html
@@ -132,7 +132,18 @@
         <p>Where is the F***ing bus !?</p>
         </div>
       </section>
-      
+
+      <section id="Madrid">
+        <div class="content">
+          <h2>Trip : Nantes</h2>
+          <p>Normally, we had to go by plane to madrid but it was more dificult than the plan...The plane was canseled </p>
+        <img src="src/1.jpeg" alt="">
+        <p>It was not a bug problem for us, we took the bus to bordeaux, it was very short and we was very very late but it was good finally :) </p>
+        <p>I remember the city in bordeaux with the tram, the restaurant...It was so so good</p>
+        <img src="src/417.jpeg" alt="">
+        <p>Where is the F***ing bus !?</p>
+        </div>
+      </section>
     <!-- Add other sections of content here -->
 
   </main>
