--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li><a href="#BefinOfHard">The begin of the hard side</a><li>
       <li><a href="#stNantes">The first trip in nante</a></li>
       <li><a href="#Nantes">Trip : Nantes</a></li>
-      <li><a href="#Nantes">Trip : Nantes</a></li>
+      <li><a href="#Madrid">Trip : Madrid</a></li>
     </ul>
   </nav>
 </button>
