--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="#stNantes">The first trip in nante</a></li>
       <li><a href="#Nantes">Trip : Nantes</a></li>
       <li><a href="#Madrid">Trip : Madrid</a></li>
+      <li><a href="#Malaga">Trip : Malaga</a></li>
     </ul>
   </nav>
 </button>
