--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
       <section id="Madrid">
         <div class="content">
           <h2>Trip : Madrid</h2>
+          <p>During this </p>
           
         </div>
       </section>
