--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <section id="Madrid">
         <div class="content">
           <h2>Trip : Madrid</h2>
-          <p>During this </p>
+          <p>During this part of the travel</p>
           
         </div>
       </section>
