--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
           <h2>Trip : Madrid</h2>
           <p>During this part of the travel, I remember especially the scooter and lot of other things</p>
           <img src="src/418.jpeg" alt="">
+          <img src="" alt="">
           
         </div>
       </section>
